[package]
name = "advent_of_code_2018"
version = "0.1.0"
authors = ["Ben Simms <ben@bensimms.moe>"]
edition = "2018"

[dependencies]
aoc-runner = "0.1.0"
aoc-runner-derive = "0.1.3"
itertools = "0.7.11"
regex = "1.1.0"
lazy_static = "1.2.0"
ndarray = "0.12.1"
rayon = "1.0.3"
ndarray-parallel = "0.9.0"
chrono = "0.4.6"
bimap = "0.1.5"
