[package]
name = "advent_of_code_2018"
version = "0.1.0"
authors = ["Ben Simms <ben@bensimms.moe>"]
edition = "2018"

[dependencies]
aoc-runner = "0.2.2"
aoc-runner-derive = "0.2.1"
itertools = "0.8.0"
regex = "1.1.0"
lazy_static = "1.2.0"
ndarray = "0.12.1"
rayon = "1.0.3"
ndarray-parallel = "0.9.0"
chrono = "0.4.6"
bimap = "0.1.5"
ropey = "0.9.2"
spade = "1.6.0"
cgmath = "0.16.1"
petgraph = "0.4.13"
hashbrown = "0.1.7"
